# RMUA

1020/flag_msgs/: CMakeLists.txt  package.xml
1020/main/: CMakeLists.txt  package.xml
1020/main/include/: blackboard.h  controller.cpp  controller.h
1020/main/src/: get_origin_point.cpp
1020/px4ctrl/airsim_bridge/: CMakeLists.txt  odom_debug.cpp  waypoint_node.cpp
1020/px4ctrl/airsim_bridge/include/: kalman_filter.h
1020/px4ctrl/minimum_snap/: rviz.rviz
1020/px4ctrl/minimum_snap/include/: poly_traj.h
1020/px4ctrl/minimum_snap/src/: poly_planning.cpp
1020/px4ctrl/px4ctrl/config/: param.yaml
1020/px4ctrl/px4ctrl/include/: blackboard.h  controller.cpp  controller.h
1020/px4ctrl/px4ctrl/launch/: begin.launch
1020/px4ctrl/px4ctrl/src/: px4ctrl.cpp  px4ctrl.h
1020/px4ctrl/utils/quadrotor_msgs/: CMakeLists.txt
1020/px4ctrl/utils/waypoint_generator/launch/: special_traj.launch
decision/: run.zsh
decision/src/flag_msgs/msg/: count_circle.msg  mode_flag.msg
decision/src/main/: package.xml
decision/src/main/src/: basic_dev.hpp  get_origin_point.cpp  get_way_points.h
decision/src/px4ctrl/airsim_bridge/: odom_debug.cpp  package.xml
decision/src/px4ctrl/airsim_bridge/include/: path_generator.cpp  path_generator.h
decision/src/px4ctrl/airsim_bridge/launch/: waypointer.launch
decision/src/px4ctrl/minimum_snap/: CMakeLists.txt
decision/src/px4ctrl/minimum_snap/include/: minimum_snap.cpp  minimum_snap.h  poly_traj.cpp
decision/src/px4ctrl/minimum_snap/launch/: planning.launch
decision/src/px4ctrl/minimum_snap/src/: main.cpp  poly_planning.cpp  poly_planning.h
decision/src/px4ctrl/px4ctrl/: CMakeLists.txt  README.md
decision/src/px4ctrl/px4ctrl/config/: param.yaml
decision/src/px4ctrl/px4ctrl/include/: blackboard.h  controller.cpp
decision/src/px4ctrl/px4ctrl/launch/: begin.launch  px4ctrl.launch
drone_ws/: start.sh
drone_ws/src/ammed_detection/: CMakeLists.txt  circle_detection.cpp  package.xml
drone_ws/src/ammed_detection/include/: first_detection.hpp
drone_ws/src/ammed_detection/include/AAMED/: CMakeLists.txt
drone_ws/src/ammed_detection/include/AAMED/cmake-build/: AAMEDemo  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  DetailAAMED.aamed  Makefile  cmake_install.cmake
drone_ws/src/ammed_detection/include/AAMED/cmake-build/atomic_configure/: setup.sh
drone_ws/src/ammed_detection/include/AAMED/cmake-build/catkin_generated/: generate_cached_setup.py  setup_cached.sh
drone_ws/src/ammed_detection/include/AAMED/cmake-build/devel/: local_setup.sh
drone_ws/src/ammed_detection/include/AAMED/cmake-build/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
drone_ws/src/ammed_detection/include/AAMED/cmake-build/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
drone_ws/src/ammed_detection/include/AAMED/cmake-build/gtest/googletest/: CTestTestfile.cmake  Makefile
drone_ws/src/ammed_detection/src/: detection.cpp  first_detection.cpp  white_detection.cpp  yellow_detection.cpp
drone_ws/src/critical_nn_deploy/: CMakeLists.txt  main.cpp  package.xml  test_pcd.pcd
drone_ws/src/critical_nn_deploy/circle_detection/: first_detection.cpp  first_detection.hpp
drone_ws/src/critical_nn_deploy/circle_detection_backup/: first_detection.cpp  first_detection.hpp
drone_ws/src/critical_nn_deploy/config/: perception.yaml
drone_ws/src/critical_nn_deploy/imgwarp/: imgwarp.cpp
drone_ws/src/critical_nn_deploy/kalmanfilter/: kalman_filter.cpp  kalman_filter.h
drone_ws/src/critical_nn_deploy/launch/: perception.launch
drone_ws/src/critical_nn_deploy/lib/: libnvonnxparser.so.8.2.1
drone_ws/src/critical_nn_deploy/pcl_handle/: pcl_handle.cpp  pcl_handle.hpp
drone_ws/src/critical_nn_deploy/stereo/: stereo.cpp  stereo.hpp
drone_ws/src/critical_nn_deploy/tensorRT/: infer_controller.hpp  trt_builder.cpp
drone_ws/src/critical_nn_deploy/tensorRT/plugins/: HSwish.cu
drone_ws/src/critical_nn_deploy/unet/: unet.cpp
drone_ws/src/critical_nn_deploy/yolo/: yolo.cpp  yolo.hpp
drone_ws/src/mini_perception-main/: CMakeLists.txt  README.md  bisenet.cpp  detector.cpp  infer.cpp  lanedet.cpp  main.cpp  rangenet.cpp  stereo.cpp  stereo2.cpp  superpoint.cpp  superpoint_kernel.cu  superpoint_kernel.cuh
drone_ws/src/mini_perception-main/common/: auto_download.cpp
drone_ws/src/mini_perception-main/imgwarp/: CMakeLists.txt  imgwarp.cpp  imgwarp.h
drone_ws/src/mini_perception-main/lanedet/: lanedet.cpp  lanedet.hpp
drone_ws/src/mini_perception-main/lib/: libnvonnxparser.so.8.2.1
drone_ws/src/mini_perception-main/stereo/: stereo.cpp
drone_ws/src/mini_perception-main/tensorRT/: onnxplugin.hpp  preprocess_kernel.cu  trt_builder.hpp  trt_infer.cpp  trt_infer.hpp
drone_ws/src/mini_perception-main/tensorRT/onnxparser/: CMakeLists.txt  main.cpp
drone_ws/src/mini_perception-main/tensorRT/plugins/: DCNv2.cu  HSigmoid.cu
drone_ws/src/mini_perception-main/unet/: unet.hpp
drone_ws/src/mini_perception-main/yolo/: yolo_decode.cu
px4ctrl/airsim_bridge/: CMakeLists.txt  odom_debug.cpp  waypoint_node.cpp
px4ctrl/minimum_snap/: package.xml  rviz.rviz
px4ctrl/minimum_snap/launch/: planning.launch
px4ctrl/minimum_snap/src/: poly_planning.cpp  poly_planning.h
px4ctrl/px4ctrl/: CMakeLists.txt  package.xml
px4ctrl/px4ctrl/config/: param.yaml
px4ctrl/px4ctrl/include/: blackboard.h  controller.cpp  param.cpp  param.h
px4ctrl/px4ctrl/launch/: px4ctrl.launch
px4ctrl/px4ctrl/src/: main.cpp  px4ctrl.cpp  px4ctrl.h
vio/get_simple_rt/: CMakeLists.txt  main.cpp
vio/src/config/: vins_rviz_config.rviz
vio/src/config/realsense/: realsense_color_config.yaml
vio/src/config/uav2022/: realsense_config.yaml  uav2022_pinhole.yaml  uav2022_rgbd.yaml  uav_loc_rgbd.yaml
vio/src/vins_estimator/: CMakeLists.txt
vio/src/vins_estimator/launch/: euroc.launch  realsense.launch  uav2022.launch  uav_loc_rgbd.launch  uav_rgbd.launch
vio/src/vins_estimator/src/: estimator.cpp  estimator_node.cpp  feature_manager.cpp  feature_tracker.cpp  feature_tracker.h  imu_filter.cpp  imu_filter.h  parameters.cpp  parameters.h
(+8 files in other folders)
