<?xml version="1.0"?>
<package format="2">
  <name>minimum_snap</name>
  <version>0.0.0</version>
  <description>The minimum_snap package</description>
  <maintainer email="Critical_HIT@todo.todo">Critical_HIT</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <exec_depend>quadrotor_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
