<?xml version="1.0"?>
<package format="2">
  <name>px4ctrl</name>
  <version>0.0.0</version>
  <description>The px4ctrl package</description>
  <maintainer email="Critical_HIT@todo.todo">Critical_HIT</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <build_depend>airsim_ros</build_depend>
  <exec_depend>airsim_ros</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
