<?xml version="1.0"?>
<package format="2">
  <name>airsim_bridge</name>
  <version>0.0.0</version>
  <description>The tools package</description>
  <maintainer email="liuzihan@todo.todo">Liuzihan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
